2002-06-18  Dave Brolley  <brolley@redhat.com>

	From Catherine Moore, Michael Meissner, Richard Sandiford:
	* libc/include/machine/setjmp.h (_JBLEN): Define for __frv__.
	(_JBTYPE): Ditto.
	* libc/include/sys/config.h (__IEEE_BIG_ENDIAN): Ditto.
	(__ATTRIBUTE_IMPURE_PTR__): Ditto.
	* libc/include/machine/ieeefp.h (__IEEE_BIG_ENDIAN): Ditto.
	* configure.host: Support frv-*-*.
	* libc/machine/frv/Makefile.am: New file.
	* libc/machine/frv/configure.in: New file.
	* libc/machine/frv/setjmp.S: New file.

2002-06-18  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* libc/include/ctype.h: Remove isblank macro.

	* libc/ctype/Makefile.am (LIB_SOURCES): Add isblank.c.
	* libc/ctype/isblank.c: New file.
	* libc/include/ctype.h [!__STRICT_ANSI__]: Add isblank
	declaration.  Add isblank macro.

2002-06-18  Jeff Johnston  <jjohnstn@redhat.com>

        * testsuite/newlib.stdlib/atexit.c: New file.
        * testsuite/newlib.stdlib/atexit.exp: Ditto.
        * testsuite/newlib.string/tstring.c: Change default start size
        to something more reasonable for embedded platforms.

2002-06-14  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* libc/sys/linux/sys/errno.h (EFTYPE): Add macro.

	* libc/argz: New directory.
	* libc/argz/*: New files.
	* libc/argz/argz_add.c: New file.
	* libc/argz/argz_add_sep.c: New file.
	* libc/argz/argz_append.c: New file.
	* libc/argz/argz_count.c: New file.
	* libc/argz/argz_create.c: New file.
	* libc/argz/argz_create_sep.c: New file.
	* libc/argz/argz_delete.c: New file.
	* libc/argz/argz_extract.c: New file.
	* libc/argz/argz_insert.c: New file.
	* libc/argz/argz_next.c: New file.
	* libc/argz/argz_replace.c: New file.
	* libc/argz/argz_stringify.c: New file.
	* libc/argz/buf_findstr.c: New file.
	* libc/argz/envz_add.c: New file.
	* libc/argz/envz_entry.c: New file.
	* libc/argz/envz_get.c: New file.
	* libc/argz/envz_merge.c: New file.
	* libc/argz/envz_remove.c: New file.
	* libc/argz/envz_strip.c: New file.
	* libc/include/argz.h: New file.