@@ -6,8 +6,8 @@
 
 load_lib passfail.exp
 
-set nonpassfailtests {
+set exclude_list {
 "UTF-8.c"
 }
 
-newlib_pass_fail $nonpassfailtests
+newlib_pass_fail_all -x $exclude_list
