@@ -6,7 +6,7 @@
 
 load_lib passfail.exp
 
-set nonpassfailtests {
+set exclude_list {
 }
 
-newlib_pass_fail $nonpassfailtests
+newlib_pass_fail_all -x $exclude_list
